--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your app name...</title>
+    <title>Sakura Sketch</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="description" content="Your app description..." />
-    <meta name="keywords" content="your app keywords..." />
+    <meta
+      name="description"
+      content="Generate and iterate on anime characters with AI on infinite canvas"
+    />
+    <meta name="keywords" content="anime, ai, infinite canvas, tldraw, sakura, sketch" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-app-name.com/" />
-    <meta property="og:title" content="Your app name..." />
-    <meta property="og:description" content="Your app description..." />
-    <!-- Replace meta.png with your own image -->
-    <meta property="og:image" content="/assets/meta.png" />
+    <meta property="og:url" content="https://sakurasketch.com/" />
+    <meta property="og:title" content="Sakura Sketch" />
+    <meta
+      property="og:description"
+      content="Generate and iterate on anime characters with AI on infinite canvas"
+    />
+    <meta property="og:image" content="/assets/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://your-app-name.com/" />
-    <meta name="twitter:title" content="Your app name..." />
-    <meta name="twitter:description" content="Your app description..." />
+    <meta name="twitter:url" content="https://sakurasketch.com/" />
+    <meta name="twitter:title" content="Sakura Sketch" />
+    <meta
+      name="twitter:description"
+      content="Generate and iterate on anime characters with AI on infinite canvas"
+    />
 
-    <!-- Replace meta.png with your own image -->
-    <meta name="twitter:image" content="/assets/meta.png" />
+    <meta name="twitter:image" content="/assets/logo.png" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#0f172a" />
